--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        // connects server room id with front end
+        const ROOM_ID = "<%= roomId %>"
+    </script>
+        <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
+
+    <!-- loads socket.io code to front end -->
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <style>
